# TGFTM

./: README.MD  tgftm.h
example/: CMakeLists.txt  camera.h  example.cpp
example/glad/include/glad/: glad.h
example/glad/source/: glad.c
example/shaders/: shader.fs  shader.vs
